--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ecommerce",
   "homepage": "https://kismatshresthax.github.io/small-ecommerce",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
